# eventcam-studio

./: .gitignore  CMakeLists.txt  CMakeSettings.json  FrameDisplay.cpp  FrameDisplay.h  GrabEvent.cpp  GrabVideo.cpp  ImageGrabHandler.cpp  ImageGrabHandler.h  PreviewUi.cpp  PreviewUi.h  README.md  fssave.py  main.cpp  main_gui.py  recording_data.py  recording_playback.py  save_info.py  start_recording.py
Filesystem/: filesystem.py  fs_folder.py  json_hook.py  main.py  nodes.py  test.py
Metadata/: recording_data.py
RemoveDistortion/: calibration.py  remove_fisheye.py  stop_unfisheyed.avi  unfisheye.py
